--- a/pom.xml
+++ b/pom.xml
@@ -86,6 +86,14 @@
             <scope>test</scope>
         </dependency>
         
+        <!-- Lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.30</version>
+            <scope>provided</scope>
+        </dependency>
+        
         <!-- Mockito for mocking -->
         <dependency>
             <groupId>org.mockito</groupId>
